welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:19: error: not found: value estSurMur
while( estSurMur==true){
       ^