welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
droite();
droite();

while(estFaceMur==false){
while(estFaceMur==false){
	droite();droite();
	prendBiscuit();
	avance();avance();avance();avance();avance();
	droite();droite();
	avance();
}

while(estSurBiscuit==false ){
	avance();
}
}

while( estSurMur==true){
 while(estSurBiscuit==false){
 	droite();
 	avance();
 	gauche();
 	avance();
 }
}
